fixing test user credentials on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -451,7 +451,7 @@
   }
 
   .footer_name {
-    @apply flex size-10 items-center justify-center rounded-full bg-gray-200 max-xl:hidden;
+    @apply flex !size-10 items-center justify-center rounded-full bg-gray-200 max-xl:hidden;
   }
 
   .footer_email {
@@ -459,7 +459,7 @@
   }
 
   .footer_name-mobile {
-    @apply flex size-10 items-center justify-center rounded-full bg-gray-200;
+    @apply flex !size-10 items-center justify-center rounded-full bg-gray-200;
   }
 
   .footer_email-mobile {
